# pktkit-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: arp.rs  checksum.rs  connect.rs  ethertype.rs  frame.rs  iface.rs  ip.rs  l2adapter.rs  l2hub.rs  l3hub.rs  lib.rs  mac.rs  namespace.rs  ndp.rs  packet.rs  pipe.rs  pool.rs  protocol.rs  qemu.rs  rand.rs
src/afxdp/: bpf.rs  mod.rs  ring.rs  xdp.rs
src/dhcp/: client.rs  mod.rs  server.rs  wire.rs
src/nat/: alg_ftp.rs  alg_h323.rs  alg_irc.rs  alg_pptp.rs  alg_sip.rs  alg_tftp.rs  defrag.rs  helper.rs  mod.rs  nat.rs  nat64.rs  upnp.rs
src/ovpn/: adapter.rs  addr.rs  consts.rs  data.rs  keys.rs  mod.rs  opcode.rs  options.rs  packet_ctrl.rs  peer.rs  pkcs5.rs  prf.rs  reliable.rs  server.rs  tests.rs  window.rs
src/slirp/: checksum.rs  icmpv4.rs  icmpv6.rs  ipv6.rs  listener.rs  listener6.rs  mod.rs  packet.rs  tcp_nat.rs  tcp_out.rs  tcp_stream.rs  udp.rs  udp6.rs  usernat.rs
src/tuntap/: darwin.rs  linux.rs  mod.rs
src/vclient/: client.rs  dns.rs  http.rs  mod.rs  tcp.rs  udp.rs
src/vtcp/: congestion.rs  conn.rs  mod.rs  options.rs  recvbuf.rs  rto.rs  segment.rs  sendbuf.rs  seqspace.rs  syncookie.rs
src/wg/: adapter.rs  constants.rs  cookie.rs  crypto.rs  handler.rs  handshake.rs  mod.rs  multihandler.rs  replay.rs  server.rs  time.rs  transport.rs
tests/: dhcp_over_hub.rs  slirp_accept.rs  slirp_accept6.rs  vclient_tcp.rs  wg_cookie.rs
